--- a/public/plugins/timePicker/timePicker.css
+++ b/public/plugins/timePicker/timePicker.css
@@ -26,13 +26,10 @@
   margin-top: 0 !important;
   padding: 5px;
 }
-
 #ptTimeSelectCntr .ui-widget.ui-widget-content {
   border: 1px solid #ddd !important;
 }
-
-#ptTimeSelectCntr .ui-widget {}
-
+#ptTimeSelectCntr .ui-widget{}
 #ptTimeSelectCntr .ui-widget-header {
   background: #1fc055 none repeat scroll 0 0;
   border: 2px solid #1fc055;
@@ -43,16 +40,14 @@
   height: 40px;
   padding: 5px;
 }
-
 #ptTimeSelectCntr #ptTimeSelectUserTime {
   font-size: larger;
   line-height: 26px;
   padding: 0 10px;
   text-align: center;
 }
-
 #ptTimeSelectCntr .ui-widget-header .ui-icon {
-  /* background-image: url("../../images/ui-icons_444444_256x240.png") !important; */
+  background-image: url("images/ui-icons_444444_256x240.png") !important;
 }
 
 #ptTimeSelectCntr #ptTimeSelectCloseCntr {
@@ -63,20 +58,18 @@
 #ptTimeSelectCntr .ui-widget.ui-widget-content {
   margin-top: 0;
 }
-
 #ptTimeSelectCntr .ptTimeSelectLeftPane.ui-widget-content {
-  border-top: none;
-  border-bottom: none;
-  border-left: none;
+  border-top:none;
+  border-bottom:none;
+  border-left:none;
   border-right-width: 2px;
 }
-
 #ptTimeSelectCntr .ptTimeSelectRightPane.ui-widget-content {
   border: none;
 }
 
 /*  content style and  hover style */
-#ptTimeSelectCntr .ptTimeSelectHrCntr a,
+#ptTimeSelectCntr .ptTimeSelectHrCntr a, 
 #ptTimeSelectCntr .ptTimeSelectMinCntr a {
   display: block;
   float: left;
@@ -87,9 +80,8 @@
   text-decoration: none;
   transition: all 500ms ease;
 }
-
-#ptTimeSelectCntr .ptTimeSelectHrCntr a:hover,
-#ptTimeSelectCntr .ptTimeSelectMinCntr a:hover {
+#ptTimeSelectCntr .ptTimeSelectHrCntr a:hover, 
+#ptTimeSelectCntr .ptTimeSelectMinCntr a:hover{
   background: #1fc055 !important;
   border-color: #1fc055 !important;
 }
@@ -131,8 +123,7 @@
   margin: 2px;
   transition: all 500ms ease;
 }
-
-#ptTimeSelectCntr .ui-state-default:hover {
+#ptTimeSelectCntr .ui-state-default:hover{
   background: #1fc055 !important;
   border-color: #1fc055 !important;
   color: white !important;
@@ -143,18 +134,16 @@
 #ptTimeSelectCntr #ptTimeSelectSetButton {
   padding: 0 15px 5px 0;
 }
-
-#ptTimeSelectSetButton .ui-state-hover {
+#ptTimeSelectSetButton .ui-state-hover{
   background: #d5ac63 !important;
   border: 2px solid #252525 !important;
   border-radius: 0;
   color: #252525 !important;
   font-size: 12px !important;
   font-weight: normal;
-  height: 35px;
+  height: 35px;  
   width: 70px !important;
 }
-
 #ptTimeSelectCntr #ptTimeSelectSetButton a {
   display: block;
   text-align: center;
@@ -165,7 +154,7 @@
   color: #fff !important;
   font-size: 12px !important;
   font-weight: normal;
-  height: 35px;
+  height: 35px;  
   width: 70px !important;
   padding: 0;
   margin: 0;
@@ -173,8 +162,13 @@
   text-transform: uppercase;
   transition: all 500ms ease;
 }
-
-#ptTimeSelectCntr #ptTimeSelectSetButton a:hover {
+#ptTimeSelectCntr #ptTimeSelectSetButton a:hover{
   background: #1fc055 !important;
   border-color: #1fc055 !important;
-}
+} 
+
+
+
+
+
+
