--- a/src/App.scss
+++ b/src/App.scss
@@ -8,4 +8,4 @@
 @import url("./assets/plugins/jquery-ui/jquery-ui.css");
 @import url("./assets/plugins/timePicker/timePicker.css");
 
-@import url("./assets/css/style.scss");
+@import url("../src/assets/scss/style.scss");
