--- a/src/assets/plugins/timePicker/timePicker.css
+++ b/src/assets/plugins/timePicker/timePicker.css
@@ -52,7 +52,7 @@
 }
 
 #ptTimeSelectCntr .ui-widget-header .ui-icon {
-  /* background-image: url("../../images/ui-icons_444444_256x240.png") !important; */
+  /* background-image: url("images/ui-icons_444444_256x240.png") !important; */
 }
 
 #ptTimeSelectCntr #ptTimeSelectCloseCntr {
