--- a/src/assets/scss/templates/_navigation.scss
+++ b/src/assets/scss/templates/_navigation.scss
@@ -8,13 +8,14 @@
     @include desktop {
       padding: 15px 0;
     }
+
     li {
-      > .nav-link {
+      >.nav-link {
         font-family: $primary-font;
         font-size: 17px;
         color: $light;
         text-transform: uppercase;
-        padding: 13px 18px !important;
+        padding: 7px 18px !important;
         transition: .3s;
 
         @include desktop {
@@ -28,7 +29,7 @@
         }
       }
 
-      &.active > {
+      &.active> {
         a {
           background: transparent;
           font-weight: 600;
@@ -66,12 +67,14 @@
     z-index: 1;
     opacity: 0;
     visibility: hidden;
+
     .dropdown-item {
       padding-top: 5px;
       padding-bottom: 5px;
     }
   }
-  .navbar .dropdown:hover > .dropdown-menu {
+
+  .navbar .dropdown:hover>.dropdown-menu {
     opacity: 1;
     visibility: visible;
     margin-top: 8px;
@@ -81,26 +84,37 @@
 .dropdown-menu {
   padding: 0 20px 0 5px;
   min-width: auto;
+
   @include desktop {
     padding: 0;
   }
-  li:first-child {margin-top: 10px}
-  li:last-child {margin-bottom: 10px}
-  
+
+  li:first-child {
+    margin-top: 10px
+  }
+
+  li:last-child {
+    margin-bottom: 10px
+  }
+
   .dropdown-item {
     color: #333;
     font-size: 16px;
     transition: .3s;
+
     &:focus,
     &:hover,
-    &.active, &:active {
+    &.active,
+    &:active {
       background-color: transparent;
       color: #333;
     }
+
     &.active {
       text-decoration: underline;
       font-weight: 500;
     }
+
     &:hover {
       opacity: .7;
     }
@@ -110,23 +124,28 @@
 .dropdown-submenu {
   a.dropdown-toggle {
     color: #333;
+
     &::after {
       margin-left: 7px;
       vertical-align: .255em !important;
       transform: scale(1.3);
     }
   }
+
   .dropdown-menu {
     transform: initial;
     top: -15px;
+
     @include desktop {
       margin: 0 10px !important;
     }
   }
+
   &.dropright .dropdown-menu {
     left: calc(100% + 10px);
     margin-left: 0;
   }
+
   &.dropleft .dropdown-menu {
     left: auto;
     right: 100%;
@@ -141,13 +160,14 @@
 }
 
 .navbar-dark .navbar-toggler {
-  color: rgba(255,255,255,.5);
+  color: rgba(255, 255, 255, .5);
   border-color: #cef4f7;
   border-radius: 0;
   padding-left: 8px;
   padding-right: 8px;
   margin: 6px auto;
 }
+
 button:focus {
   outline: 0;
 }
