--- a/src/assets/scss/templates/_contact.scss
+++ b/src/assets/scss/templates/_contact.scss
@@ -1,64 +1,77 @@
-.map{
+.map {
   position: relative;
-  #map{
-    height:400px;
+
+  #map {
+    height: 400px;
     color: white;
   }
 }
 
-.contact{
-  .contact-form{
-    .form-control{
+.contact {
+  .contact-form {
+    .form-control {
       margin-bottom: 30px;
     }
   }
-  .address-block{
-    .media{
+
+  .address-block {
+    .media {
       display: flex;
+
       @include tablet {
         flex-wrap: wrap;
         text-align: center;
-        &:last-child{
+
+        &:last-child {
           margin-bottom: 30px;
         }
       }
-      i{
+
+      i {
         color: $primary-color;
         font-size: 30px;
         margin-right: 35px;
         width: 40px;
         display: block;
+
         @include tablet {
           flex-basis: 100%;
           margin-right: 0;
           margin-bottom: 30px;
         }
       }
-      .media-body{
-        h3{
+
+      .media-body {
+        h3 {
           font-size: 24px;
           margin-bottom: 15px;
         }
-        p{
+
+        p {
           line-height: 25px;
         }
       }
-      &:not(:last-child){
+
+      &:not(:last-child) {
         margin-bottom: 20px;
       }
     }
   }
 }
+
 .form-control {
   box-shadow: none;
   border-radius: 0;
-  padding: 15px 20px;
+  padding: 8px 20px;
   font-size: 14px;
+  border-radius: 30px;
+
   &:focus {
-    box-shadow:none;
-    border:1px solid $primary-color;
+    box-shadow: none;
+    border: 1px solid $primary-color;
   }
-  &.main{
-    padding:20px;
+
+  &.main {
+    padding: 20px;
   }
 }
