--- a/src/assets/scss/templates/_navigation.scss
+++ b/src/assets/scss/templates/_navigation.scss
@@ -24,7 +24,7 @@
         }
 
         &:hover {
-          color: $light;
+          color: #132646;
           opacity: .7;
         }
       }
@@ -32,7 +32,8 @@
       a.active {
         background: transparent;
         font-weight: 600;
-        text-decoration: underline;
+        // text-decoration: underline;
+        background-color: #132646;
 
         &:hover {
           background: transparent;
