home page almost done

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
-
 // Variables
 $light: #fff;
 $primary-color: #48bdc5;
+$secondry-color: #8a8a8a;
 $black: #000;
-$primary-font:'Source Sans Pro', sans-serif;
+$primary-font: 'Source Sans Pro', sans-serif;
 $secondary-font: 'Roboto', sans-serif;
 $icon-font: "Font Awesome 5 Free";
