--- a/src/assets/scss/templates/_skills.scss
+++ b/src/assets/scss/templates/_skills.scss
@@ -3,6 +3,7 @@
   z-index: 1;
   background-size: cover !important;
   background-repeat: no-repeat !important;
+
   &:before {
     position: absolute;
     top: 0px;
@@ -15,6 +16,7 @@
     background: -webkit-linear-gradient(left, rgba(122, 102, 203, 1) 0%, rgba(72, 189, 197, 0.74) 100%);
     background: linear-gradient(to right, rgba(122, 102, 203, 0.8) 0%, rgba(72, 189, 197, 0.74) 100%);
   }
+
   .pie-value {
     display: block;
     position: absolute;
@@ -28,6 +30,7 @@
     font-weight: 600;
     line-height: 40px;
   }
+
   .knob {
     position: relative;
     text-align: center;
@@ -50,8 +53,10 @@
     border: 24px solid #ffffff;
     border-radius: 50%;
   }
+
   .skills {
     padding: 105px 0px;
+
     h6 {
       color: #ffffff;
       font-size: 20px;
@@ -59,5 +64,11 @@
       padding-top: 25px;
       text-transform: capitalize;
     }
+  }
+}
+
+label {
+  sup {
+    color: red;
   }
 }
