--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 // Variables
 $light: #fff;
-$primary-color: #48bdc5;
+// $primary-color: #48bdc5;
+$primary-color: #2167b2;
 $secondry-color: #8a8a8a;
 $black: #000;
 $primary-font: 'Source Sans Pro', sans-serif;
