--- a/src/assets/scss/templates/_blog.scss
+++ b/src/assets/scss/templates/_blog.scss
@@ -143,7 +143,7 @@
       &:after {
         position: absolute;
         content: '';
-        background: #48bdc5;
+        background: #2167b2;
         bottom: 0px;
         left: 50%;
         margin-left: -25px;
