--- a/src/assets/scss/templates/_page-title.scss
+++ b/src/assets/scss/templates/_page-title.scss
@@ -1,9 +1,10 @@
 .page-title {
   position: relative;
-  padding: 80px 0;
+  padding: 30px 0;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+
   &:before {
     content: '';
     left: 0px;
@@ -13,10 +14,11 @@
     position: absolute;
     background: rgba($color: #132646, $alpha: 0.6);
   }
+
   .title-text {
     h1 {
       position: relative;
-      font-size: 40px;
+      font-size: 30px;
       color: #ffffff;
       line-height: 50px;
       font-weight: 700;
@@ -25,24 +27,28 @@
       letter-spacing: 1px;
       font-family: $primary-font;
     }
-    .title-menu{
+
+    .title-menu {
       padding-left: 0;
       margin-bottom: 0;
     }
+
     .title-menu li {
       position: relative;
-      color: #48bdc5;
+      color: #2167b2;
       font-size: 17px;
       display: inline-block;
       line-height: 30px;
       text-transform: capitalize;
+
       a {
         margin-right: 8px;
         color: #ffffff;
         font-weight: 500;
         transition: all 500ms ease;
+
         &:hover {
-          color: #48bdc5;
+          color: #2167b2;
           transition: all 500ms ease;
         }
       }
