--- a/src/assets/scss/templates/_about.scss
+++ b/src/assets/scss/templates/_about.scss
@@ -188,7 +188,7 @@
 .promo-video {
   position: relative;
   padding: 150px 0;
-  background: url('../../images/background/promo-video.jpg');
+  // background: url('../../images/background/promo-video.jpg');
   background-size: cover;
   background-position: center center;
 
