--- a/src/assets/scss/templates/_page-title.scss
+++ b/src/assets/scss/templates/_page-title.scss
@@ -35,7 +35,7 @@
 
     .title-menu li {
       position: relative;
-      color: #2167b2;
+      color: #ae1f25;
       font-size: 17px;
       display: inline-block;
       line-height: 30px;
