new section added

--- a/src/assets/scss/templates/_cta.scss
+++ b/src/assets/scss/templates/_cta.scss
@@ -13,9 +13,9 @@
         font-size: 30px;
       }
 
-      p {
-        padding-top: 20px;
-      }
+      // p {
+      //   padding-top: 20px;
+      // }
     }
 
     .top-doctor {
@@ -78,8 +78,8 @@
         font-weight: normal;
         text-transform: uppercase;
         letter-spacing: 1px;
-        font-size: 25px;
-        margin-bottom: 30px;
+        font-size: 22px;
+        margin-bottom: 20px;
       }
 
       p {
