--- a/src/assets/scss/templates/_welcome.scss
+++ b/src/assets/scss/templates/_welcome.scss
@@ -17,8 +17,12 @@
 
     .item {
       position: relative;
-      margin-top: 40px;
-      padding: 0 30px;
+      margin: 20px 0;
+      padding: 20px;
+      border-radius: 17px;
+      background: #fff;
+      height: 150px;
+      box-shadow: 0 0 10px #eaeaea;
 
       @include tablet {
         padding: 0;
