--- a/src/assets/scss/templates/_welcome.scss
+++ b/src/assets/scss/templates/_welcome.scss
@@ -111,3 +111,18 @@
 .our-program {
   h6 {}
 }
+
+.Beneficiaries {
+  img {
+    width: 70px;
+  }
+
+  .counter {
+    font-size: 40px;
+  }
+
+  .title {
+    color: #ae1f25;
+    font-weight: 600;
+  }
+}
