doctor iamge aded

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,3 +9,7 @@
 @import url("./assets/plugins/timePicker/timePicker.css");
 
 @import url("../src/assets/scss/style.scss");
+
+.pg-img {
+    height: 140px;
+}
