footer Pdf issue relsoved

--- a/src/assets/scss/templates/_footer.scss
+++ b/src/assets/scss/templates/_footer.scss
@@ -76,7 +76,8 @@
       li {
         padding-bottom: 15px;
 
-        a {
+        a,
+        span {
           font-size: 15px;
           line-height: 26px;
           font-weight: 400;
