--- a/src/assets/scss/templates/_team.scss
+++ b/src/assets/scss/templates/_team.scss
@@ -25,7 +25,6 @@
 
     img {
       width: 100%;
-      height: 400px;
       object-fit: cover;
     }
 
@@ -65,6 +64,22 @@
           color: $light;
         }
       }
+    }
+  }
+
+
+}
+
+.available-descp {
+  cursor: pointer;
+
+  img {
+    transition: 0.5s all;
+  }
+
+  &:hover {
+    img {
+      transform: scale(1.05);
     }
   }
 }
