--- a/src/assets/scss/templates/_page-title.scss
+++ b/src/assets/scss/templates/_page-title.scss
@@ -40,6 +40,7 @@
       display: inline-block;
       line-height: 30px;
       text-transform: capitalize;
+      text-shadow: 0px 0px 3px #ffffff;
 
       a {
         margin-right: 8px;
