--- a/src/assets/scss/templates/_contact.scss
+++ b/src/assets/scss/templates/_contact.scss
@@ -67,9 +67,9 @@
 
 .form-control {
   box-shadow: none;
-  padding: 8px 20px;
+  padding: 8px 15px !important;
   font-size: 15px;
-  border-radius: 30px;
+  border-radius: 10px;
   height: 45px;
 
   &:focus {
